Fix navbar signout getting covered by branding box on scroll. Add opacity to hero buttons to see trailer through them

--- a/src/components/hero/style.css
+++ b/src/components/hero/style.css
@@ -18,6 +18,11 @@
 .hero-btn {
   padding: 10px;
   margin: 5px 5px 5px 0;
+  opacity: 0.6;
+}
+
+.hero-btn:hover {
+  opacity: 1;
 }
 
 .fa-plus,
@@ -35,7 +40,7 @@
   height: 50px;
   width: 150px;
   background: black;
-  z-index: 1;
+  z-index: 0;
   position: absolute;
   bottom: 0;
   right: 0;
